fix edit button positioning on mobile devices

--- a/src/Components/shared/RoundedIconBtn/rounded-icon-btn-styles.css
+++ b/src/Components/shared/RoundedIconBtn/rounded-icon-btn-styles.css
@@ -3,7 +3,7 @@
 	width: 56px;
 	height: 56px;
 	right: 16px;
-	bottom: 150px;
+	bottom: 96px;
 	background: #3843d0;
 	box-shadow: 0px 2px 0px #212b80;
 	border-radius: 100px;
